src/tpm/astro.h

/*
**********************************************************************
** IAU (1976) System of Astronomical Constants
** from the Astronomical Almanac, 1984 p. K6 (SI units, MKS)
**********************************************************************
*/

/* Gaussian gravitational constant */
#define IAU_K	(0.01720209895)
/* distance of moon */
#define IAU_DM	(384400.0e3)
/* astronomical unit */
#define IAU_AU	(1.49597870e11)
/* speed of light */
#define IAU_C	(299792458.0)
/* radius of earth */
#define IAU_RE	(6378137.0)
/* radius of moon */
#define IAU_RM	(1738000.0)
/* flattening factor of earth */
#define IAU_F	(0.00335281)
/* constant of aberration */
#define IAU_KAPPA	(20.49552)
/* rotational velocity of the earth in radians/s */
#define IAU_W	(7.2921151467e-5)
/*
**********************************************************************
** end of IAU (1976) System of Astronomical Constants
** from the Astronomical Almanac, 1984 p. K6 (SI units, MKS)
**********************************************************************
*/

/* the equatorial location of the galactic pole in degrees */
#define GAL_RA	(192.25)
#define GAL_DEC	(27.4)
#define GAL_LON	(33.0)
/*
** definitions for FK4 and FK5 precession angles
** see Aoki et al., 1983, Astronomy and Astrophysics, 128, 263.
** the first four are FK4 angles (when in doubt, use PRECESS_KINOSHITA).
** the final one is the One True FK5 set of angles.
*/
#define PRECESS_NEWCOMB		(0)	/* aoki eqs 9a-c, ES 1961 */
#define PRECESS_ANDOYER		(1)	/* aoki eqs 8a-c, Andoyer 1911 */
#define PRECESS_KINOSHITA	(2)	/* aoki eqs 10a-c, Kinoshita 1975 */
#define PRECESS_LIESKE		(3)	/* aoki eqs 11a-c, Lieske 1967 */
#define PRECESS_FK4		(PRECESS_KINOSHITA)
#define PRECESS_FK5		(4)	/* ES 1992, Lieske 1979, 1977 */
/*
** flags to indicate whether the precession frames
** are inertial or not. See ES (1992), p. 182-183.
*/
#define PRECESS_INERTIAL	(0)
#define PRECESS_ROTATING	(1)
/* this structure defines a star datum */
typedef struct s_star {
	double a;	/* right ascension */
	double d;	/* declination */
	double m;	/* magnitude */
} STAR;
/* this structure defines a line segment between two stars */
typedef struct s_cons {
	double a1;	/* right ascension */
	double d1;	/* declination */
	double a2;	/* right ascension */
	double d2;	/* declination */
} CONS;
/* some simple transformations implemented as macros */

#define cat2v6(a,b,c,d,e,f,g)	cat2v6r2(a,b,c,d,e,f,g)
#define v62cat(a,b,c,d,e,f,g,h)	v6r2cat(a,b,c,d,e,f,g,h)
/* definitive time transformations */
#define et2tdt(et)	(et)
#define tai2tdt(tai)	((tai)+(32.184/86400))
#define tdt2et(tdt)	(tdt)
#define ut12et(ut1)	((ut1)+(delta_T(ut1)/86400))
#define utc2et(utc)	((utc)+(delta_ET(utc)/86400))
#define utc2tai(utc)	((utc)+(delta_AT(utc)/86400))
#define utc2tdt(utc)	((utc)+(delta_TT(utc)/86400))
#define utc2ut1(utc)	((utc)+(delta_UT(utc)/86400))
/* approximate time transformations */
#define et2ut1(et)	((et)-(delta_T(et)/86400))
#define et2utc(et)	((et)-(delta_ET(et)/86400))
#define tai2utc(tai)	((tai)-(delta_AT(tai)/86400))
#define tdt2tai(tdt)	((tdt)-(32.184/86400))
#define tdt2utc(tdt)	((tdt)-(delta_TT(tdt)/86400))
#define ut12utc(ut1)	((ut1)-(delta_UT(ut1)/86400))
/* derived time transformations */
#define et2tai(et)	(tdt2tai(et2tdt(et)))
#define et2tdb(et)	(tdt2tdb(et2tdt(et)))
#define tai2et(tai)	(tdt2et(tai2tdt(tai)))
#define tai2tdb(tai)	(tdt2tdb(tai2tdt(tai)))
#define tai2ut1(tai)	(et2ut1(tdt2et((tai2tdt(tai)))))
#define tdb2et(tdb)	(tdt2et(tdb2tdt(tdb)))
#define tdb2tai(tdb)	(tdt2tai(tdb2tdt(tdb)))
#define tdb2ut1(tdb)	(et2ut1(tdt2et(tdb2tdt(tdb))))
#define tdb2utc(tdb)	(tai2utc(tdt2tai(tdb2tdt(tdb))))
#define tdt2ut1(tdt)	(et2ut1(tdt2et(tdt)))
#define ut12tai(ut1)	(tdt2tai(et2tdt(ut12et(ut1))))
#define ut12tdb(ut1)	(tdt2tdb(et2tdt(ut12et(ut1))))
#define ut12tdt(ut1)	(et2tdt(ut12et(ut1)))
#define utc2tdb(utc)	(tdt2tdb(tai2tdt(utc2tai(utc))))
/* convenience time transformations */
#define et2ut(et)	(et2ut1(et))
#define ut2et(ut)	(ut12et(ut))
#define ut2gmst(ut)	(ut12gmst(ut))
/*extern double nut_longitude(double tdt);
  extern double nut_obliquity(double tdt);
  extern double obj2lha(V6 object, V6 obs);*/
extern double obliquity(double tdt);
/*extern int n_cons_data(void);
  extern int n_star_data(void);*/
extern int tpm(V6 *pvec, int s1, int s2, double ep, double eq, TPM_TSTATE *tstate);