src/tpm/times.h

/* the JD of the modified JD system */
#define MJD_0	(2400000.5)
/* the JD of B1950.0 */
#define B1950	(2433282.42345905)
/* the JD of J2000.0 */
#define J2000	(2451545.0)
/* the JD of 1984.0, the magic FK4/FK5 conversion time */
#define J1984   (2445700.5)
/* the tropical century at 1900.0 */
#define CB	(36524.21987817305)
/* the julian century */
#define CJ	(36525.0)
#define BYEAR2JD(x)	(B1950 + ((x)-1950.0)*(CB/100.0))
#define JD2BYEAR(x)	(1950.0 + ((x)-B1950)*(100.0/CB))
#define JYEAR2JD(x)	(J2000 + ((x)-2000.0)*(CJ/100.0))
#define JD2JYEAR(x)	(2000.0 + ((x)-J2000)*(100.0/CJ))
#define SUNDAY		(0)
#define MONDAY		(1)
#define TUESDAY		(2)
#define WEDNESDAY	(3)
#define THURSDAY	(4)
#define FRIDAY		(5)
#define SATURDAY	(6)
/* degree, minute, second */
typedef struct s_dms {
	double dd;
	double mm;
	double ss;
} DMS;
/* hour, minute, second */
typedef struct s_hms {
	double hh;
	double mm;
	double ss;
} HMS;
/* year, month, day*/
typedef struct s_ymd {
	int y;
	int m;
	double dd;
	HMS hms;
} YMD;
/* julian day */
typedef struct s_jd {
	double dd;	/* day part */
	HMS hms;	/* fractional part */
} JD;
#define d2hms(d)		(h2hms(d2h(d)))
#define dms2h(dms)		(d2h(dms2d(dms)))
#define dms2r(dms)		(d2r(dms2d(dms)))
#define fmt_dms(dms)		(fmt_d(dms2d(dms)))
#define fmt_hms(hms)		(fmt_h(hms2h(hms)))
#define fmt_jd(jd)		(fmt_j(jd2j(jd)))
#define fmt_r(r)		(fmt_d(r2d(r)))
#define fmt_y(y)		(fmt_ymd(y2ymd(y)))
#define h2dms(h)		(d2dms(h2d(h)))
#define hms2d(hms)		(h2d(hms2h(hms)))
#define hms2r(hms)		(h2r(hms2h(hms)))
#define j2j(j)			(j)
#define j2y(j)			(jd2y(j2jd(j)))
#define j2ymd(j)		(jd2ymd(j2jd(j)))
#define jd2y(jd)		(ymd2y(jd2ymd(jd)))
#define r2dms(r)		(d2dms(r2d(r)))
#define r2hms(r)		(h2hms(r2h(r)))
#define y2j(y)			(jd2j(y2jd(y)))
#define y2jd(y)			(ymd2jd(y2ymd(y)))
#define y2y(y)			(y)
#define ymd2j(ymd)		(jd2j(ymd2jd(ymd)))
/* EXTERN_START */
extern DMS d2dms(double d);
extern DMS dms2dms(DMS dms);
extern DMS hms2dms(HMS hms);
extern HMS dms2hms(DMS dms);
extern HMS h2hms(double h);
extern HMS hms2hms(HMS hms);
extern JD j2jd(double j);
extern JD jd2jd(JD jd);
extern JD jd_now(void);
extern JD ymd2jd(YMD ymd);
extern YMD jd2ymd(JD jd);
extern YMD y2ymd(double y);
extern YMD ydd2ymd(int y, double dd);
extern YMD ymd2ymd(YMD ymd);
extern char *fmt_alpha(double alpha);
extern char *fmt_d(double d);
extern char *fmt_delta(double delta);
extern char *fmt_h(double h);
extern char *fmt_j(double j);
extern char *fmt_ymd(YMD ymd);
extern char *fmt_ymd_raw(YMD ymd);
extern double d2d(double d);
extern double dms2d(DMS dms);
extern double gcal2j(int y, int m, int d);
extern double h2h(double h);
extern double hms2h(HMS hms);
extern double jcal2j(int y, int m, int d);
extern double jd2j(JD jd);
extern double r2r(double r);
extern double utc_now(void);
extern double ymd2dd(YMD ymd);
extern double ymd2rdb(YMD ymd);
extern double ymd2y(YMD ymd);
extern int j2dow(double j);
extern int y2doy(int y);
extern void j2gcal(int *y, int *m, int *d, double j);
extern void j2jcal(int *y, int *m, int *d, double j);